# OpenLCH

./: .gitignore  .gitlab-ci-local-env  .gitlab-ci-local-variables.yml  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  LICENSE  README.md
experiments/: calibrate_all.py  imu.py  keyboard_control.py  model.py  plot.py  requirements.txt  robot.py  run.py  test.py
experiments/teleop/: README.md
experiments/teleop/urdf/: robot_fixed.urdf
experiments/teleop/urdf/meshes/: Torso.stl  ankle_pitch_right.stl  hand_right.stl  hip_yaw_right.stl  (+1 more)
hardware/: README.md
hardware/Electronics/IMU Mount, Rev A/: IMU Mount-all-pos.csv  Rev A Electronics, Micro Stompy - BOM_IMUMount.csv  Rev A Electronics, Micro Stompy - CPL_IMUMount.csv
hardware/Electronics/MilkVHat, Rev A/: Rev A Electronics, Micro Stompy - BOM_MilkVHat.csv  Rev A Electronics, Micro Stompy - CPL_MilkVHat.csv
inference/: calibrate_all.py  controller.py  convert.py  dashboard.py  gamepad.py  main.py  marcos.py  plot.py  requirements.txt  rl_walk.py  robot.py  run.py  run_onnx.py  servo_movements_20241107_140758.csv  servo_movements_20241107_141009.csv  standing_micro.onnx  standing_micro_fixed.onnx
inference/pybullet/: main.py
inference/pybullet/urdf/: robot_fixed.urdf
inference/test/: test.py  test_model.onnx
models/: README.md  ppo_standing.pt  ppo_walking.pt
runtime/: .gitlab-ci.yml  Cargo.toml  README.md  build.rs  ota.sh
runtime/.cargo/: config.toml
runtime/client/: Makefile  README.md  setup.py
runtime/config/: stompymicro.toml
runtime/firmware/cviwrapper/: Makefile  cviwrapper.c
runtime/firmware/efuse/: Makefile  efuse.c  efuse_read_serial.c
runtime/firmware/lx16_control/: generate.py  main.py
runtime/firmware/server_control/: sdkconfig  server_control.py
runtime/firmware/server_control/main/: servo_lib.c  servo_lib.h  ws_echo_server.c
runtime/firmware/servo_driver/: zero.py
runtime/firmware/sts3215/: Makefile  ion_cvitek.h  sts3215.c  sts3215.h
runtime/firmware/wired_control/: movements.json  wired_control.py
runtime/models/: convert_model.sh
runtime/openlch/: LICENSE  MANIFEST.in  pyproject.toml
runtime/proto/: hal.proto  hal_pb.proto
runtime/server_control/: sdkconfig.old
runtime/src/: HAL.rs  config.toml  controller.rs  hal.rs  lib.rs  main.rs  model.rs  robot.rs  sim.rs
runtime/src/hal_risc/: mod.rs  qmi8658.rs
runtime/src/hal_serial/: mod.rs
runtime/tests/: test.rs
runtime/toolchain-docker-img/: Dockerfile
runtime/utils/: convert.py  run_onnx.py
runtime/websocket_control/: servo_client.py
runtime/wired_control/: controller.py  requirements.txt
server_control/main/: CMakeLists.txt
servo_driver/: hiwonder_lsbc_v16.py  main.py
teleop/: main.py  requirements.txt
teleop/urdf/meshes/: ankle_pitch_left.stl  foot_left.stl  foot_right.stl  hip_roll_left.stl  hip_roll_right.stl  hip_yaw_left.stl  knee_pitch_right.stl  left_shoulder_yaw_motor.stl  shoulder_yaw_left.stl  shoulder_yaw_right.stl
wired_control/: generate.py  lx_setup.py  spline.py
(+22 files in other folders)
